# aiter

./: .gitignore  README.md  RELEASE_NOTES_v0.1.12.md  RELEASE_PROCESS.md  REPO_CLEANUP_PLAN.md  genindex.html  index.html  installation.html  objects.inv  pr-body.md  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  split-tests-update-summary.md
_sources/: index.rst.txt  (+1 more)
forge/: .gitignore  AGENTS.md  CLAUDE.md  README.md  forge.yaml.example  pyproject.toml
forge/.githooks/: pre-push
forge/agents/: README.md  bench-runner.md  dashboard-refresh.md  flydsl-cleanup.md  ir-inspector.md  kernel-writer.md  learning-extractor.md  perf-analyzer.md
forge/docs/: REVIEW.md  architecture.md  ck_build_audit.md  ck_build_comparison.md  ck_removal_closure_plan.md  ck_removal_tracker.md  dashboard_refresh_runbook.md  enhancement-proposals.md  use-case-flydsl-rope-backend.md
forge/learnings/: README.md
forge/proposals/: 00-RFC-forge-subdir.md  README.md
forge/scripts/: bench_asm_variants_full.py  bench_ck_build_comparison.py  bench_ck_removal.py  bench_dashboard_low_perf_sample.py  bench_gemm_bf16.py  bench_gemm_bf16_asm_variants.py  bench_gemm_bf16_fullday.py  bench_gemm_bf16_v2.py  bench_gemm_bf16_v3.py  bench_moe_minimax_down.py  merge_ck_build_comparison.py  parse_rocprof.py  prof_moe_single.py  profile_gemm_m8192.py  refresh_dashboard.py  refresh_minimax_dashboard.py  run_parallel_benchmark.sh  run_parallel_optimize.sh  triage_dashboard_refresh.py  verify_dashboard_staleness.py  verify_mi355.sh
forge/targets/: local.env.example
(+661 files in other folders)
