[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiter-forge"
version = "0.3.0"
description = "AITER AI-agent harness: kernel tuning workflow + PR guardian gate. Lives at aiter/forge/."
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "jinja2",
]

[project.optional-dependencies]
dev = ["pytest"]
llm = ["anthropic"]
remote = ["paramiko"]
all = ["anthropic", "paramiko"]

[project.scripts]
forge = "aiter_forge.cli:main"
aiter-forge = "aiter_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests that require external resources (GPU, mounted aiter repo, rocprof). Skipped by default in unit-test runs.",
]
